--- a/flyapp.plist
+++ b/flyapp.plist
@@ -19,13 +19,13 @@
                 <key>bundle-identifier</key>
                 <string>flyapp.com</string>
                 <key>bundle-version</key>
-                <string>v1.0.0</string>
+                <string>1.3.74</string>
                 <key>kind</key>
                 <string>software</string>
                 <key>releaseNotes</key>
-                <string>v1.0.0</string>
+                <string>say something</string>
                 <key>title</key>
-                <string>FlyApp</string>
+                <string>重庆环卫</string>
             </dict>
         </dict>
     </array>
