--- a/flyapp.plist
+++ b/flyapp.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://tanghengzhi.com/getUDID/flyapp.ipa</string>
+                    <string>https://tanghengzhi.com/get-UDID/flyapp.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
