--- a/sfb.plist
+++ b/sfb.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://tanghengzhi.com/get-UDID/sfb.ipa</string>
+                    <string>https://tanghengzhi.com/sigh-php/sfb.ipa</string>
                 </dict>
             </array>
             <key>metadata</key>
